cmake_minimum_required(VERSION 3.10)
project(Crypto_OA)
set(CMAKE_CXX_STANDARD 11)
include_directories("/opt/homebrew/Cellar/yaml-cpp/0.8.0/include")
include_directories(${CMAKE_SOURCE_DIR})
link_directories("/opt/homebrew/Cellar/yaml-cpp/0.8.0/lib")
add_executable(lookup-cli lookup-cli.cpp util.cpp)
target_link_libraries(lookup-cli yaml-cpp)
configure_file(./data/test.yaml ${CMAKE_BINARY_DIR}/data/test.yaml COPYONLY)